# aircraft_ha_noi

./: .gitignore  CMakeLists.txt  main.cpp  main.qml  qml.qrc
data/: hanoi.json
qml/: CalendarDialog.qml  main.qml
qml/Component/: AddFlightDialog.qml  FlightCard.qml
qml/Screen/: AddPolygonMap.qml  ChangeRouteMap.qml  MapScreen.qml  RouteMap.qml  SearchScreen.qml
src/: AirCraftManager.cpp  AirCraftManager.h  AircraftInstance.cpp  AircraftInstance.h  AircraftManager.cpp  AircraftManager.h  CMakeLists.txt  Flight.h  FlightDatabaseManager.cpp  FlightDatabaseManager.h  FlightModel.cpp  FlightModel.h  GeoUtils.cpp  GeoUtils.h  PolygonLoader.cpp  PolygonModel.cpp  main.cpp
src/model/: AircraftModel.cpp  AircraftModel.h  CMakeLists.txt  Flight.h  FlightModel.cpp  FlightModel.h  PolygonModel.cpp  PolygonModel.h
src/services/: CMakeLists.txt  FlightDatabaseManager.cpp  FlightDatabaseManager.h  FlightLoader.cpp  FlightLoader.h  PolygonLoader.h
